--- a/index.html
+++ b/index.html
@@ -2,87 +2,90 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="src/estilos.css">
+    <title>Document</title>
 </head>
 <body>
     <header class="header-wrapper">
         <div class="header">
             <div class="checkbox-container">
                 <div class="checkbox-wrapper">
-                    <input type="checkbox"  id="toggle">
+                    <input type="checkbox" id="toggle">
                     <label class="checkbox" for="toggle">
                         <div class="trace"></div>
                         <div class="trace"></div>
                         <div class="trace"></div>
                     </label>
-                        <div class="menu"></div>
-                        <nav class="menu-items">
-                            <ul>
-                                <li>
-                                    <a href="#">Home</a>
-                                </li>
-                                <li>
-                                    <a href="#">Sobre</a>
-                                </li>
-                                <li>
-                                    <a href="#">Projetos</a>
-                                </li>
-                            </ul>
-                        </nav>
+                    <div class="menu"></div>
+                    <nav class="menu-items">
+                        <ul>
+                            <li>
+                                <a href="#">Home</a>
+                            </li>
+                            <li>
+                                <a href="#">Sobre</a>
+                            </li>
+                            <li>
+                                <a href="#">Projetos</a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
         </div>
         <h1>Antônio Ezequiel</h1>
         <h2>Front-end Developer</h2>
         <div class="social-media">
-            <a href="https://www.linkedin.com/in/antonio-ezequiel"  target="_blank">Linkedin</a>
-            <a href="https://github.com/pernalongak" target="_blank">Github</a>
+            <a href="#">Linkedin</a>
+            <a href="#">Github</a>
         </div>
     </header>
-    <main class="container">
+    <div class="container">
         <div class="card-container">
-            <div class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nihil fugiat, recusandae qui ea omnis rem voluptates molestiae provident quam consequuntur nesciunt voluptatem fuga exercitationem veritatis sed facere iure dolorem?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus quaerat provident nisi unde optio maiores pariatur aliquid odio cumque at rerum aperiam, expedita aliquam. Explicabo libero ab esse aperiam natus.
+            <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
+             consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
+             consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
             </div>
             <div class="card">
                 <div class="card-wrapper">
                     <h2>Github</h2>
-                    <p>Veja meus Projetos!</p>
+                    <p>Veja meus projetos!</p>
                 </div>
             </div>
         </div>
+
         <div class="card-container">
-            <div class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nihil fugiat, recusandae qui ea omnis rem voluptates molestiae provident quam consequuntur nesciunt voluptatem fuga exercitationem veritatis sed facere iure dolorem?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus quaerat provident nisi unde optio maiores pariatur aliquid odio cumque at rerum aperiam, expedita aliquam. Explicabo libero ab esse aperiam natus.
-            </div>
             <div class="card">
                 <div class="card-wrapper">
                     <h2>Linkedin</h2>
-                    <p>Acompanhe minha carreira!</p>
+                    <p>Vem ver minha carreira profissional!</p>
                 </div>
             </div>
+            <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
+             consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
+             consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
+            </div>
         </div>
+        
         <div class="card-container">
-            <div class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nihil fugiat, recusandae qui ea omnis rem voluptates molestiae provident quam consequuntur nesciunt voluptatem fuga exercitationem veritatis sed facere iure dolorem?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus quaerat provident nisi unde optio maiores pariatur aliquid odio cumque at rerum aperiam, expedita aliquam. Explicabo libero ab esse aperiam natus.
+            <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
+             consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
+             consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
             </div>
             <div class="card">
                 <div class="card-wrapper">
-                    <h2>Instagram
-                    </h2>
-                    <p>ou mais do meu dia-a-dia</p>
+                    <h2>Instagram</h2>
+                    <p>Ou mais do meu dia-a-dia ;)</p>
                 </div>
             </div>
         </div>
-    </main>
+    </div>
     <footer class="footer">
-        Feito Por Antônio Ezequiel
+        Feito por Antônio Ezequiel
     </footer>
 </body>
 </html>
