--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <h1>Antônio Ezequiel</h1>
         <h2>Front-end Developer</h2>
         <div class="social-media">
-            <a href="#">Linkedin</a>
-            <a href="#">Github</a>
+            <a href="www.linkedin.com/in/antonio-ezequiel">Linkedin</a>
+            <a href="https://github.com/pernalongak">Github</a>
         </div>
     </header>
     <div class="container">
